<resources>
    <string name="app_name">BulletinBoard</string>
    <string name="BBMainCity">Город</string>
    <string name="BBMainCategories">Категории</string>
    <string name="BBMainNewBulletin">Новое объявление</string>
    <string name="BBMainUpdate">Обновить</string>
    <string name="ErrorConnectToServer">Отсутсвует соединение с сервером</string>
    <string name="BBMainNewResetFilters">Сбросить фильтры</string>
    <string name="addBulletin">Добавить</string>
    <string name="addCity">Добавить город</string>
    <string name="addCategory">Добавить категорию</string>
    <string name="Contacts">Контакты</string>
    <string name="cost">Цена</string>
    <string name="preferences">Настройки</string>
    <string name="Maximum">Максимум</string>
    <string name="Minimum">Минимум</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="needSetCost">Укажите цену</string>
    <string name="needSetDetail">Укажите детальную информацию</string>
    <string name="needSetTitle">Укажите заголовок</string>
    <string name="itemNew">Новый</string>
    <string name="itemUsed">Подержанный</string>
    <string name="my_bulletin">Мои объявления</string>
    <string name="tag">Поиск</string>
    <string name="findtag">Поиск</string>
    <string name="price">Цена</string>
    <string name="title">Заголовок</string>
    <string name="text">Описание</string>
    <string name="state">Новый</string>
    <string name="load_image">Загрузить изображение</string>
    <string name="clear">Очистить</string>
    <string name="new_category">Новая категория</string>
    <string name="new_city">Новый город</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="phone">Телефон</string>
    <string name="email">E-mail</string>
    <string name="tagfind">Ключевое слово</string>
    <string name="isdelete">Удалить</string>
    <string name="isCancel">Отмена</string>
    <string name="isDeleteMessage">Подтвердить удаление?</string>
    <string name="rbnStatusNew">Новые</string>
    <string name="rbnStatusUsed">Подержанные</string>
    <string name="StatusDialogStatus">Статус</string>
    <string name="status">Состояние</string>
    <string name="CityTitle">Город</string>
    <string name="CategoryTitle">Категория</string>
</resources>
