<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menubbgridactivityUpdate"
            android:icon="@drawable/refresh"
            android:showAsAction="always"
            android:title="@string/BBMainUpdate">
    </item>
    <item
            android:id="@+id/menubbgridactivityNewBulletin"
            android:icon="@drawable/add"
            android:showAsAction="ifRoom|withText"
            android:title="@string/BBMainNewBulletin">
    </item>
    <item
            android:id="@+id/menubbgridactivityCategory"
            android:icon="@drawable/category_filter"
            android:showAsAction="ifRoom|withText"
            android:title="@string/BBMainCategories">
    </item>
    <item
            android:id="@+id/menubbgridactivityCity"
            android:icon="@drawable/city_filter"
            android:showAsAction="ifRoom|withText"
            android:title="@string/BBMainCity">
    </item>
    <item
            android:id="@+id/menubbgridactivityMyBulletin"
            android:showAsAction="ifRoom|withText"
            android:title="@string/my_bulletin">
    </item>
    <item
            android:id="@+id/menubbgridactivityTag"
            android:icon="@drawable/city_filter"
            android:showAsAction="ifRoom|withText"
            android:title="@string/tag">
    </item>
    <item
            android:id="@+id/menubbgridactivityResetFilters"
            android:showAsAction="ifRoom|withText"
            android:visible="false"
            android:title="@string/BBMainNewResetFilters">
    </item>

    <item
            android:id="@+id/menubbgridactivityCostFilter"
            android:icon="@drawable/cost_filter"
            android:showAsAction="ifRoom|withText"
            android:title="@string/cost">
    </item>
    <item
            android:id="@+id/menubbgridactivityStatusFilter"
            android:showAsAction="ifRoom|withText"
            android:title="@string/status">
    </item>
    <item
            android:id="@+id/menubbgridactivitPreferences"
            android:icon="@drawable/settings"
            android:showAsAction="ifRoom|withText"
            android:title="@string/preferences">
    </item>




</menu>