<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menubbgridactivityUpdate"
            android:icon="@android:drawable/ic_menu_rotate"
            android:showAsAction="always"
            android:title="@string/BBMainUpdate">
    </item>
    <item
            android:id="@+id/menubbgridactivityCategory"
            android:showAsAction="always|withText"
            android:title="@string/BBMainCategories">
    </item>
    <item
            android:id="@+id/menubbgridactivityCity"
            android:icon="@android:drawable/ic_menu_call"
            android:showAsAction="ifRoom|withText"
            android:title="@string/BBMainCity">
    </item>
    <item
            android:id="@+id/menubbgridactivityResetFilters"
            android:icon="@android:drawable/ic_menu_info_details"
            android:showAsAction="ifRoom|withText"
            android:visible="false"
            android:title="@string/BBMainNewResetFilters">
    </item>
    <item
            android:id="@+id/menubbgridactivityNewBulletin"
            android:icon="@android:drawable/ic_menu_info_details"
            android:showAsAction="ifRoom|withText"
            android:title="@string/BBMainNewBulletin">
    </item>


</menu>