<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menuaddbulletinAdd"
            android:icon="@android:drawable/ic_menu_rotate"
            android:showAsAction="always|withText"
            android:title="@string/addBulletin">
    </item>
    <item
            android:id="@+id/menuaddbulletinAddCity"
            android:icon="@android:drawable/ic_menu_rotate"
            android:showAsAction="ifRoom|withText"
            android:title="@string/addCity">
    </item>
    <item
            android:id="@+id/menuaddbulletinAddCategory"
            android:icon="@android:drawable/ic_menu_rotate"
            android:showAsAction="ifRoom|withText"
            android:title="@string/addCategory">
    </item>;

</menu>