<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgAddBulletin"
            android:scaleType="fitXY" android:minHeight="100dp" android:minWidth="100dp"
            android:src="@drawable/nonimage" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edaddBulletinTitle"
            android:hint="@string/title"
            android:layout_below="@+id/imgAddBulletin" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignRight="@+id/btnAddBulletinAddImage"
            android:layout_alignEnd="@+id/btnAddBulletinAddImage"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edaddBulletinText"
            android:inputType="textMultiLine"
            android:layout_below="@+id/edaddBulletinTitle"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:hint="@string/text"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnaddBulletinCity" android:layout_below="@+id/edaddBulletinText"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnaddBulletinCategories" android:layout_below="@+id/spnaddBulletinCity"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edaddBulletinPrice"
            android:hint="@string/price"
            android:layout_below="@+id/tvaddBulletinSelectedCategories"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:inputType="numberDecimal"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:id="@+id/cbaddBulletinState"
            android:checked="true"
            android:layout_below="@+id/edaddBulletinPrice" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvaddBulletinSelectedCategories"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/btnAddBulletinClearCategories" android:layout_below="@+id/spnaddBulletinCategories"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_image"
            android:id="@+id/btnAddBulletinAddImage" android:layout_alignParentTop="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" android:onClick="addBulletinOpenFile"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/btnAddBulletinClearCategories"
            android:layout_alignRight="@+id/btnAddBulletinAddImage"
            android:layout_alignEnd="@+id/btnAddBulletinAddImage" android:layout_below="@+id/spnaddBulletinCategories"
            android:layout_above="@+id/edaddBulletinPrice" android:onClick="onAddBulletinClear"/>

</RelativeLayout>
    </ScrollView>